--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -62,6 +62,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ github.event.release.upload_url }}
-          asset_path: src/BootstrapMultiSelect.Plugin/bootstrap-multiselect-${{ github.event.release.tag_name }}.tgz
-          asset_name: bootstrap-multiselect-${{ github.event.release.tag_name }}.tgz
+          asset_path: src/BootstrapMultiSelect.Plugin/gpaol-bootstrap-multiselect-${{ github.event.release.tag_name }}.tgz
+          asset_name: gpaol-bootstrap-multiselect-${{ github.event.release.tag_name }}.tgz
           asset_content_type: application/gzip
