--- a/src/BootstrapMultiSelect.Plugin/package.json
+++ b/src/BootstrapMultiSelect.Plugin/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@gpaol/bootstrap-multiselect",
-  "version": "1.1.0",
-  "description": "Bootstrap 5 MultiSelect component with search, filtering, grouped options, and comprehensive localization support",
+  "version": "1.2.0",
+  "description": "Bootstrap 5 MultiSelect component with search, filtering, grouped options, pagination, and comprehensive localization support",
   "main": "src/js/bootstrap-multiselect.js",
   "style": "src/css/bootstrap-multiselect.css",
   "files": [
